--- a/Generator/Generator.vcxproj
+++ b/Generator/Generator.vcxproj
@@ -18,11 +18,20 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BaseGenerator.h" />
+    <ClInclude Include="IStreamGenerator.h" />
+    <ClInclude Include="RandomGenerator.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="IStreamGeneratorr.cpp" />
+    <ClCompile Include="RandomGenerator.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{1819833d-724f-4528-b07f-49b11ad34d95}</ProjectGuid>
-    <RootNamespace>Demo</RootNamespace>
+    <ProjectGuid>{ede3ec7e-7e37-4942-ba3b-371cbb034bce}</ProjectGuid>
+    <RootNamespace>Generator</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -40,7 +49,7 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
-    <ConfigurationType>Application</ConfigurationType>
+    <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
@@ -127,20 +136,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="Source.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Generator\Generator.vcxproj">
-      <Project>{ede3ec7e-7e37-4942-ba3b-371cbb034bce}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Matrix\Matrix.vcxproj">
-      <Project>{61d3d3ba-d70a-4c7c-a79c-277ad37db7d7}</Project>
-    </ProjectReference>
-    <ProjectReference Include="..\Task\Task.vcxproj">
-      <Project>{7776be25-1865-4d8c-bf30-d7fbee59845c}</Project>
-    </ProjectReference>
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
